generator client {
  provider               = "prisma-client-js"
  generatedFileExtension = "ts"
  moduleFormat           = "esm"
  runtime                = "bun"
}

datasource db {
  provider = "mysql"
}

model film {
  id           Int       @id @default(autoincrement())
  title        String
  description  String?
  releaseDate  DateTime?
  durationMin  Int?
  posterUrl    String

  actors       actor[]
  filmGenres   filmGenre[]
  showtimes    showtime[]

  @@unique([title, releaseDate])
}

model genre {
  id         Int          @id @default(autoincrement())
  name       String       @unique
  filmGenres filmGenre[]
}

model filmGenre {
  filmId  Int
  genreId Int

  film  film  @relation(fields: [filmId], references: [id], onDelete: Cascade)
  genre genre @relation(fields: [genreId], references: [id])

  @@id([filmId, genreId])
  @@index([filmId])
  @@index([genreId])
}

model user {
  id        Int       @id @default(autoincrement())
  email     String    @unique
  password  String
  role      userRole  @default(user)
  updatedAt DateTime?

  orders order[]
}

model order {
  id        BigInt      @id @default(autoincrement())
  userId    Int
  status    orderStatus @default(pending)
  createdAt DateTime    @default(now())
  expiresAt DateTime?

  user    user     @relation(fields: [userId], references: [id], onDelete: Cascade)
  tickets ticket[]

  @@index([userId])
}

model theatre {
  id    Int    @id @default(autoincrement())
  name  String @unique

  halls hall[]
}

model hall {
  id        Int    @id @default(autoincrement())
  theatreId Int
  name      String @unique
  capacity  Int

  theatre   theatre   @relation(fields: [theatreId], references: [id], onDelete: Cascade)
  seats     seat[]
  showtimes showtime[]

  @@index([theatreId])
}

model seat {
  id     Int        @id @default(autoincrement())
  hallId Int
  type   seatType

  hall    hall     @relation(fields: [hallId], references: [id])
  tickets ticket[]
  taken   showtimeTakenSeat[]

  @@index([hallId])
}

model showtime {
  id         Int      @id @default(autoincrement())
  filmId     Int
  hallId     Int
  startsAt   DateTime
  endsAt     DateTime
  isCanceled Boolean  @default(false)

  film     film    @relation(fields: [filmId], references: [id])
  hall     hall    @relation(fields: [hallId], references: [id])
  tickets  ticket[]
  taken    showtimeTakenSeat[]

  @@unique([hallId, startsAt])
  @@index([filmId])
  @@index([hallId])
}

model ticket {
  id         BigInt       @id @default(autoincrement())
  orderId    BigInt?
  showtimeId Int
  seatId     Int
  status     ticketStatus @default(reserved)
  unitPrice  Decimal
  reservedAt DateTime     @default(now())
  paidAt     DateTime?
  ticketCode String?      @unique

  order    order?   @relation(fields: [orderId], references: [id])
  showtime showtime @relation(fields: [showtimeId], references: [id])
  seat     seat     @relation(fields: [seatId], references: [id])

  @@unique([showtimeId, seatId])
  @@index([orderId])
  @@index([showtimeId])
  @@index([seatId])
}

model actor {
  id       Int     @id @default(autoincrement())
  name     String  @unique
  filmId   Int
  link     String?
  imageUrl String

  film film @relation(fields: [filmId], references: [id], onDelete: Cascade)

  @@index([filmId])
}

model showtimeTakenSeat {
  id         Int      @id @default(autoincrement())
  seatId     Int
  showtimeId Int

  seat     seat     @relation(fields: [seatId], references: [id])
  showtime showtime @relation(fields: [showtimeId], references: [id])

  @@unique([seatId, showtimeId])
  @@index([seatId])
  @@index([showtimeId])
}

enum orderStatus {
  pending
  paid
  expired
}

enum ticketStatus {
  reserved
  paid
  expired
}

enum seatType {
  Standard
  Premium
  Double
}

enum userRole {
  user
  admin
}