//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table film {
  id Int [pk, increment]
  title String [not null]
  description String
  releaseDate DateTime
  durationMin Int
  posterUrl String [not null]
  actors actor [not null]
  filmGenres filmGenre [not null]
  showtimes showtime [not null]

  indexes {
    (title, releaseDate) [unique]
  }
}

Table genre {
  id Int [pk, increment]
  name String [unique, not null]
  filmGenres filmGenre [not null]
}

Table filmGenre {
  filmId Int [not null]
  genreId Int [not null]
  film film [not null]
  genre genre [not null]

  indexes {
    (filmId, genreId) [pk]
  }
}

Table user {
  id Int [pk, increment]
  email String [unique, not null]
  password String [not null]
  role userRole [not null, default: 'user']
  updatedAt DateTime
  orders order [not null]
}

Table order {
  id BigInt [pk, increment]
  userId Int [not null]
  status orderStatus [not null, default: 'pending']
  createdAt DateTime [default: `now()`, not null]
  expiresAt DateTime
  user user [not null]
  tickets ticket [not null]
}

Table theatre {
  id Int [pk, increment]
  name String [unique, not null]
  halls hall [not null]
}

Table hall {
  id Int [pk, increment]
  theatreId Int [not null]
  name String [unique, not null]
  capacity Int [not null]
  theatre theatre [not null]
  seats seat [not null]
  showtimes showtime [not null]
}

Table seat {
  id Int [pk, increment]
  hallId Int [not null]
  type seatType [not null]
  status seatStatus [not null, default: 'available']
  hall hall [not null]
  tickets ticket [not null]
  taken showtimeTakenSeat [not null]
}

Table showtime {
  id Int [pk, increment]
  filmId Int [not null]
  hallId Int [not null]
  startsAt DateTime [not null]
  endsAt DateTime [not null]
  isCanceled Boolean [not null, default: false]
  film film [not null]
  hall hall [not null]
  tickets ticket [not null]
  taken showtimeTakenSeat [not null]

  indexes {
    (hallId, startsAt) [unique]
  }
}

Table ticket {
  id BigInt [pk, increment]
  orderId BigInt
  showtimeId Int [not null]
  seatId Int [not null]
  status ticketStatus [not null, default: 'reserved']
  unitPrice Decimal [not null]
  reservedAt DateTime [default: `now()`, not null]
  paidAt DateTime
  ticketCode String [unique]
  order order
  showtime showtime [not null]
  seat seat [not null]

  indexes {
    (showtimeId, seatId) [unique]
  }
}

Table actor {
  id Int [pk, increment]
  name String [unique, not null]
  filmId Int [not null]
  link String
  imageUrl String [not null]
  film film [not null]
}

Table showtimeTakenSeat {
  id Int [pk, increment]
  seatId Int [not null]
  showtimeId Int [not null]
  seat seat [not null]
  showtime showtime [not null]

  indexes {
    (seatId, showtimeId) [unique]
  }
}

Enum orderStatus {
  pending
  paid
  expired
}

Enum ticketStatus {
  reserved
  paid
  expired
}

Enum seatType {
  Standard
  Premium
  Double
}

Enum seatStatus {
  available
  taken
}

Enum userRole {
  user
  admin
}

Ref: filmGenre.filmId > film.id [delete: Cascade]

Ref: filmGenre.genreId > genre.id

Ref: order.userId > user.id [delete: Cascade]

Ref: hall.theatreId > theatre.id [delete: Cascade]

Ref: seat.hallId > hall.id

Ref: showtime.filmId > film.id

Ref: showtime.hallId > hall.id

Ref: ticket.orderId > order.id

Ref: ticket.showtimeId > showtime.id

Ref: ticket.seatId > seat.id

Ref: actor.filmId > film.id [delete: Cascade]

Ref: showtimeTakenSeat.seatId > seat.id

Ref: showtimeTakenSeat.showtimeId > showtime.id